--- a/libs/uikit-web/src/lib/components/Layout/Layout.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Layout.module.scss
@@ -1,7 +1,8 @@
 @use 'sass:map';
 @use 'Layout.palette' as palette;
+@use '../../shared/styles/media-query.scss' as mediaQuery;
 
-@mixin initBorder {
+@mixin border {
   border-width: 1px;
   border-style: solid;
   box-sizing: border-box;
@@ -44,19 +45,19 @@ $laptopMaxWidth: 1040px;
 
 .Header {
   height: $headerHeight;
-  @include initBorder;
+  @include border;
 }
 
 .Sidebar {
   width: $sidebarWidth;
   height: 100%;
-  @include initBorder;
+  @include border;
 
   &Header {
     width: 100%;
     height: $subheaderHeight;
     flex-shrink: 0;
-    @include initBorder;
+    @include border;
   }
 }
 
@@ -65,6 +66,7 @@ $laptopMaxWidth: 1040px;
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   &Header {
     width: 100%;
@@ -87,13 +89,18 @@ $laptopMaxWidth: 1040px;
   .SidebarHeader:only-child {
     display: none;
   }
+
+  @include mediaQuery.use(xs, sm, md) {
+    position: absolute;
+    transform: translateX(-100%);
+    transition: transform .3s;
+  }
 }
 
 .contentWrapper {
   width: 100%;
   height: 100%;
   max-width: $laptopMaxWidth;
-  margin: 0 auto;
 
   &.responsive {
     max-width: 100%;
