--- a/libs/uikit-web/src/lib/components/Layout/Layout.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Layout.module.scss
@@ -1,108 +1,18 @@
 @use 'sass:map';
-@use 'Layout.palette' as palette;
 @use '../../shared/features/media-query/media-query.scss' as mediaQuery;
-
-@mixin border {
-  border-width: 1px;
-  border-style: solid;
-  box-sizing: border-box;
-}
-
-$headerHeight: 54px;
-$subheaderHeight: 62px;
-$sidebarWidth: 320px;
-
-$tabletMaxWidth: 840px;
-$laptopMaxWidth: 1040px;
+@use './grid.scss' as grid;
 
 .Layout {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
 
-  @each $color, $props in palette.$colors {
-    &.#{'' + $color} {
-      .Header {
-        background-color: map-get($props, headerFill);
-        border-color: map-get($props, headerStroke);
-      }
-      .Sidebar {
-        background-color: map-get($props, sidebarFill);
-        border-color: map-get($props, sidebarStroke);
+  @include grid.root;
 
-        &Header {
-          background-color: map-get($props, sidebarHeaderFill);
-          border-color: map-get($props, sidebarHeaderStroke);
-        }
-      }
-      .Content {
-        background: map-get($props, contentFill);
-      }
-    }
-  }
-}
+  & .Header {
+    @include grid.header;
 
-.Header {
-  height: $headerHeight;
-  @include border;
-}
-
-.Sidebar {
-  width: $sidebarWidth;
-  height: 100%;
-  @include border;
-
-  &Header {
-    width: 100%;
-    height: $subheaderHeight;
-    flex-shrink: 0;
-    @include border;
-  }
-}
-
-.Content {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  &Header {
-    width: 100%;
-    height: $subheaderHeight;
-    flex-shrink: 0;
-    background: rgba(#1D1D1D, .15);
-  }
-}
-
-.body {
-  height: 100%;
-  display: flex;
-}
-
-.aside {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-
-  .SidebarHeader:only-child {
-    display: none;
-  }
-
-  @include mediaQuery.use(xs, sm, md) {
-    position: absolute;
-    transform: translateX(-100%);
-    transition: transform .3s;
-  }
-}
-
-.contentWrapper {
-  width: 100%;
-  height: 100%;
-  max-width: $laptopMaxWidth;
-
-  &.responsive {
-    max-width: 100%;
+    background: var(--layout-header-fill, #333);
+    border: 1px solid var(--layout-header-stroke, #333);
+    height: 54px;
   }
 }
