refactor(layout): extends sidebar

--- a/libs/uikit-web/src/lib/components/Layout/Sidebar/Sidebar.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Sidebar/Sidebar.module.scss
@@ -1,10 +1,17 @@
+@use '../../../shared/features/media-query/media-query.scss' as mediaQuery;
 @use '../grid' as grid;
 
+
 .Sidebar {
-  width: 320px;
   background: var(--sidebar-fill, #333);
   border: 1px solid var(--sidebar-stroke, #333);
   box-sizing: border-box;
+
+  @each $token, $_ in mediaQuery.$mediaQueries {
+    @include mediaQuery.use($token) {
+      width: var(--sidebar-width-#{$token}, 320px);
+    }
+  }
 
   &.left {
     @include grid.sidebar(left);
@@ -16,7 +23,7 @@
 
   .Header {
     background: var(--sidebar-header-fill, #333);
-    border: 1px solid var(--sidebar-header-stroke, #333);
+    border-bottom: 1px solid var(--sidebar-header-stroke, #333);
     box-sizing: border-box;
     height: 62px;
   }
