--- a/libs/uikit-web/src/lib/components/Layout/Content/Content.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Content/Content.module.scss
@@ -3,6 +3,7 @@
 .Content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background: var(--content-fill, #333);
 
   @include grid.content;
@@ -20,6 +21,7 @@
   .Header {
     background: rgba(#1D1D1D, .15);
     height: 62px;
+    width: 100%;
     flex-shrink: 0;
   }
 }
