refactor(sidebar): with layout stories

--- a/libs/uikit-web/src/lib/components/Layout/Sidebar/Sidebar.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Sidebar/Sidebar.module.scss
@@ -1,22 +1,23 @@
-@use '../../../shared/features/media-query/media-query.scss' as mediaQuery;
 @use '../grid' as grid;
 
 .Sidebar {
   background: var(--sidebar-fill, #333);
   border: 1px solid var(--sidebar-stroke, #333);
   box-sizing: border-box;
+  width: 320px;
+  height: 100%;
 
-  @each $token, $_ in mediaQuery.$mediaQueries {
-    @include mediaQuery.use($token) {
-      width: var(--sidebar-width-#{$token}, 320px);
-    }
+  &.fixed {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    transform: translateX(0);
+    will-change: transform;
+    transition: transform .3s;
   }
 
   &.left {
     @include grid.sidebar(left);
-  }
-
-  &.left.fixed {
     left: 0;
   }
 
@@ -26,24 +27,11 @@
 
   &.right {
     @include grid.sidebar(right);
-  }
-
-  &.right.fixed {
     right: 0;
   }
 
   &.right.fixed.hidden {
     transform: translateX(100%);
-  }
-
-  &.fixed {
-    position: absolute;
-    z-index: 1;
-    height: 100%;
-    top: 0;
-    transform: translateX(0);
-    will-change: transform;
-    transition: transform .3s;
   }
 
   .Header {
