fix(ui): add color-scheme light only

--- a/libs/uikit-web/src/lib/components/Button/Button.module.scss
+++ b/libs/uikit-web/src/lib/components/Button/Button.module.scss
@@ -70,6 +70,8 @@ $darkColor: #172B4D;
 }
 
 .Button {
+  color-scheme: light only !important;
+
   font-family: $defaultFont;
 
   @include initDefault;
