--- a/libs/uikit-web/src/lib/components/Layout/Layout.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Layout.module.scss
@@ -3,6 +3,8 @@
 @use './grid.scss' as grid;
 
 .Layout {
+  color-scheme: light only !important;
+
   width: 100vw;
   height: 100vh;
   position: relative;
