--- a/libs/uikit-web/src/lib/components/Button/Button.module.scss
+++ b/libs/uikit-web/src/lib/components/Button/Button.module.scss
@@ -2,6 +2,7 @@
 @use 'sass:map';
 @use './Button.sizes.scss' as sizes;
 @use './Button.colors.scss' as colors;
+@use '../../shared/common/styles/native-dark-mode.scss' as darkMode;
 
 $defaultBackground: #DCDFE4;
 $defaultColor: #172B4D;
@@ -13,24 +14,26 @@ $lightColor: #F7F7F7;
 $darkColor: #172B4D;
 
 @mixin initTheme($color, $background, $step: 4%) {
-  background-color: $background !important;
-  color: $color !important;
-
-  &:focus {
-    background-color: color.scale($background, $lightness: $step) !important;
-  }
-
-  &:hover {
-    background-color: color.scale($background, $lightness: $step * 2) !important;
-  }
-
-  &:active {
-    background-color: color.scale($background, $lightness: $step * 3) !important;
-  }
-
-  &[disabled] {
-    background-color: $defaultDisabledBackground !important;
-    color: $defaultDisabledColor !important;
+  @include darkMode.fix {
+    background-color: $background !important;
+    color: $color !important;
+  
+    &:focus {
+      background-color: color.scale($background, $lightness: $step) !important;
+    }
+  
+    &:hover {
+      background-color: color.scale($background, $lightness: $step * 2) !important;
+    }
+  
+    &:active {
+      background-color: color.scale($background, $lightness: $step * 3) !important;
+    }
+  
+    &[disabled] {
+      background-color: $defaultDisabledBackground !important;
+      color: $defaultDisabledColor !important;
+    }
   }
 }
 
@@ -70,12 +73,7 @@ $darkColor: #172B4D;
 }
 
 .Button {
-  color-scheme: light only !important;
-
   font-family: $defaultFont;
-
-  @include initDefault;
-  @include initColors;
 
   display: inline-flex;
   outline: none;
@@ -85,6 +83,9 @@ $darkColor: #172B4D;
   transition: background-color .15s;
   box-shadow: $defaultShadow;
   cursor: pointer;
+
+  @include initDefault;
+  @include initColors;
 
   &.rectangular {
     @include initSizes(sizes.$rectangleSizes);
