--- a/libs/uikit-web/src/lib/components/Layout/Content/Content.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Content/Content.module.scss
@@ -1,14 +1,16 @@
 @use '../grid' as grid;
+@use '../../../shared/common/styles/native-dark-mode.scss' as darkMode;
 
 .Content {
-  color-scheme: light only !important;
-
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: var(--content-fill, #333) !important;
 
   @include grid.content;
+
+  @include darkMode.fix {
+    background: var(--content-fill, #333) !important;
+  }
 
   &.responsive > main {
     max-width: 100%;
@@ -21,9 +23,12 @@
   }
 
   .Header {
-    background: rgba(#1D1D1D, .15) !important;
     height: 62px;
     width: 100%;
     flex-shrink: 0;
+
+    @include darkMode.fix {
+      background: rgba(#1D1D1D, .15) !important;
+    }
   }
 }
