--- a/libs/uikit-web/src/lib/components/Layout/Layout.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Layout.module.scss
@@ -1,6 +1,5 @@
 @use 'sass:map';
 @use '../../shared/features/media-query/media-query.scss' as mediaQuery;
-@use '../../shared/common/styles/native-dark-mode.scss' as darkMode;
 @use './grid.scss' as grid;
 
 .Layout {
@@ -15,11 +14,9 @@
     box-sizing: border-box;
     height: 54px;
 
-    @include grid.header;
+    background: var(--layout-header-fill, #333);
+    border: 1px solid var(--layout-header-stroke, #333);
 
-    @include darkMode.fix {
-      background: var(--layout-header-fill, #333) !important;
-      border: 1px solid var(--layout-header-stroke, #333) !important;
-    }
+    @include grid.header;
   }
 }
