--- a/libs/uikit-web/src/lib/components/Layout/Content/Content.module.scss
+++ b/libs/uikit-web/src/lib/components/Layout/Content/Content.module.scss
@@ -1,16 +1,15 @@
 @use '../grid' as grid;
-@use '../../../shared/common/styles/native-dark-mode.scss' as darkMode;
 
 .Content {
   display: flex;
   flex-direction: column;
   align-items: center;
 
+  background: var(--content-fill, #333);
+
   @include grid.content;
 
-  @include darkMode.fix {
-    background: var(--content-fill, #333) !important;
-  }
+  
 
   &.responsive > main {
     max-width: 100%;
@@ -27,8 +26,6 @@
     width: 100%;
     flex-shrink: 0;
 
-    @include darkMode.fix {
-      background: rgba(#1D1D1D, .15) !important;
-    }
+    background: rgba(#1D1D1D, .15);
   }
 }
